2008-10-05  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* m4/minuso.m4 (AM_PROG_CC_C_O): Work around shell quoting issue
	with AIX sh; fixes depcomp6.test failure.
	* NEWS, THANKS: Update.
	Report by Rainer Tammer.

	Print captured output before failing.
	* tests/acloca14.test, tests/acloca17.test, tests/acloca18.test,
	tests/aclocal.test, tests/acsilent.test, tests/alpha.test,
	tests/check4.test, tests/fn99.test,
	tests/fn99subdir.test, tests/help.test, tests/init.test,
	tests/lisp8.test, tests/missing3.test, tests/pr220.test,
	tests/python11.test, tests/python4.test, tests/python5.test,
	tests/unused.test, tests/version8.test: When exit is called
	after a command that has stdout or stderr redirected to a file
	for later inspection, output the file before failing the test.

	Fix some comment typos.
	* automake.in: Fix some comment typos.
	* lib/Automake/Condition.pm: Likewise.
	* lib/Automake/DisjConditions.pm: Likewise.
	* lib/Automake/Variable.pm: Likewise.
	* lib/Automake/tests/DisjConditions.pl: Likewise.

2008-09-22  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* tests/aclibobj.test: Fix race condition.

2008-09-04  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Avoid Heisenbug with verbose testing on HP-UX.
	* tests/output-order.test: Remove spurious redirection line
	from output for comparison.

2008-08-31  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Copyright year updates.
	* lib/am/header-vars.am: Update copyright years.
	* lib/am/tags.am: Likewise.

	* THANKS: Use Cyrillic name instead of ASCII transcription.

	Fix rebuilding of removed subdir/Makefile.in files.
	* lib/am/configure.am (%MAKEFILE-IN%) [?!TOPDIR_P?]: If
	subdir/Makefile.in was removed, am--refresh would not update
	it.  Fix up for it by running the per-directory rebuild rule.
	* tests/remake6.test, tests/remake7.test: New tests.
	* tests/Makefile.am: Adjust.
	* NEWS, THANKS: Update.
	Report and initial patch by Ilya N. Golubev.

2008-08-19  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
