@@ -89,6 +89,8 @@ check4.test \
 check5.test \
 check6.test \
 check7.test \
+check8.test \
+check9.test \
 checkall.test \
 clean.test \
 clean2.test \
