@@ -1,3 +1,11 @@
+2008-10-06  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	Improve test coverage of current TESTS semantics.
+	* tests/check8.test: New test, for subdir tests and setting of
+	$srcdir.
+	* tests/check9.test: New test, check @substituted@ TESTS.
+	* tests/Makefile.am: Update.
+
 2008-10-05  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* m4/minuso.m4 (AM_PROG_CC_C_O): Work around shell quoting issue
